src/components/DeckList/index.css
.deckList {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  padding: 2rem 0;
  gap: 2rem;
  width: 50%;
}

@media screen and (max-width: 500px) {
  .deckList {
    padding: 1rem;
    gap: 1rem;
    overflow: scroll;
    height: 100vh;
    width: 100vw;
  }
}

